Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4746

Lustre not using kernel current_umask() function breaks GRSecurity umask handling

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.1.5, Lustre 1.8.9, Lustre 2.5.0, Lustre 2.4.2
    • 3
    • 13041

      Lustre 2.5.0 (and before) do not use the kernel's default current_umask() function, instead accessing the current process pointer directly with current->fs->umask. On a standard kernel this is equivalent, however on a GRSecurity-enabled kernel there's additional logic in the kernel's current_umask() function that's being skipped.

        1. lustre-1.8.9.patch
          2 kB
        2. lustre-2.1.5.patch
          0.4 kB
        3. lustre-2.4.2.patch
          0.4 kB
        4. lustre-2.5.0.patch
          0.5 kB

            bogl Bob Glossman (Inactive)
            aprout Andrew Prout
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: