LU-4746 libcfs: Use Linux kernel current_umask() function

Lustre not using kernel current_umask() function breaks GRSecurity
umask handling

Replaces current->fs->umask with more secure current_umask() function
This is the 1.8.9 version

Change-Id: Idda270d3607a986ddb75c4cd77b71aa3c56911e9
Signed-off-by: Andrew Prout <ajprout@hotmail.com>
Signed-off-by: Cliff White <cliffwhi@intel.com>