libcfs/include/libcfs/linux/libcfs.h
@@ -127,7 +127,6 @@ struct cfs_stack_trace {
  * Macros to access common characteristics of "current" UNIX process.
  */
 #define current_pid()             (current->pid)
-#define current_umask()           (current->fs->umask)
 #define current_comm()            (current->comm)
 
 /* check if task is running in compat mode.*/
