lustre/llite/namei.c
@@ -618,7 +618,7 @@ static struct dentry *ll_lookup_it(struct inode *parent, struct dentry *dentry,
         if (rc)
                 RETURN(ERR_PTR(rc));
 
-        it->it_create_mode &= ~current->fs->umask;
+        it->it_create_mode &= ~current_umask();
 
         rc = mdc_intent_lock(ll_i2mdcexp(parent), &op_data, NULL, 0, it,
                              lookup_flags, &req, ll_mdc_blocking_ast, 0);
@@ -949,7 +949,7 @@ static int ll_mknod_generic(struct inode *dir, struct qstr *name, int mode,
                name->len, name->name, dir->i_ino, dir->i_generation, dir,
                mode, rdev);
 
-        mode &= ~current->fs->umask;
+        mode &= ~current_umask();
 
         switch (mode & S_IFMT) {
         case 0:
@@ -1073,7 +1073,7 @@ static int ll_mkdir_generic(struct inode *dir, struct qstr *name, int mode,
         CDEBUG(D_VFSTRACE, "VFS Op:name=%.*s,dir=%lu/%u(%p)\n",
                name->len, name->name, dir->i_ino, dir->i_generation, dir);
 
-        mode = (mode & (S_IRWXUGO|S_ISVTX) & ~current->fs->umask) | S_IFDIR;
+        mode = (mode & (S_IRWXUGO|S_ISVTX) & ~current_umask()) | S_IFDIR;
         err = ll_new_node(dir, name, NULL, mode, 0, dchild);
 
         RETURN(err);
